--- a/scripts/clusteringAlgorithm/clusteringAlgorithm.css
+++ b/scripts/clusteringAlgorithm/clusteringAlgorithm.css
@@ -1,4 +1,5 @@
-#astar {
+
+#clusteringAlg {
     background-color: #fff;
     border: 2px solid #000;
     border-top: none;
@@ -7,7 +8,7 @@
     position: relative;
 }
 
-#astar button.button-run {
+#clusteringAlg button.button-run {
     position: absolute;
     bottom: 1vw;
     right: 1vw;
