--- a/indexStyle.css
+++ b/indexStyle.css
@@ -41,3 +41,19 @@ body {
     border-top: none;
     display: none;
 }
+
+div {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+  
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 90%;
+    border-bottom: 2px solid #000;
+    background-color: rgb(255, 255, 255);
+}
