--- a/scripts/aStar/aStarStyle.css
+++ b/scripts/aStar/aStarStyle.css
@@ -25,3 +25,20 @@ button:hover {
     padding-right: 1rem;
     font-size: 1.3rem;
 }
+
+#astar-div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 93.5%;
+    border-bottom: 2px solid #000;
+    background-color: rgb(255, 255, 255);
+}
+
+#astar-canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+}
