--- a/scripts/aStar/aStarStyle.css
+++ b/scripts/aStar/aStarStyle.css
@@ -27,6 +27,10 @@ button:hover {
 }
 
 #astar-div {
+    display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
     position: absolute;
     top: 0;
     left: 0;
@@ -38,7 +42,8 @@ button:hover {
 
 #astar-canvas {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: rgb(255, 255, 255);
 }
