--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,5 +1,6 @@
 html {
     font-size: 16px;
+    overflow:  hidden;
 }
 
 body {
@@ -40,10 +41,4 @@ body {
     border: 2px solid #000;
     border-top: none;
     display: none;
-}
-
-div {
-    width: 100%;
-    height: 100%;
-    position: relative;
 }
