--- a/scripts/aStar/aStarStyle.css
+++ b/scripts/aStar/aStarStyle.css
@@ -15,14 +15,14 @@
     bottom: 0.6vw;
     right: 1vw;
 	outline: none;
-	border: 1px solid #fff;
+	border: 1px solid #000000;
 	border-radius: 50px;
 	height: 46px;
 	line-height: 46px;
 	font-size: 1rem;
 	font-weight: 600;
 	text-decoration: none;
-	color: #444;
+	color: white;
 	background-color: #7db8ff;
 	box-shadow: 0 4px 6px rgb(65 132 144 / 10%), 0 1px 3px rgb(0 0 0 / 8%);
 	cursor: pointer;
