--- a/scripts/aStar/aStarStyle.css
+++ b/scripts/aStar/aStarStyle.css
@@ -8,12 +8,9 @@
 }
 
 #astar button.btn {
-	display: inline-block;	
+	display: inline-block;
 	box-sizing: border-box;
 	padding: 0 25px;
-    position: absolute;
-    bottom: 0.6vw;
-    right: 1vw;
 	outline: none;
 	border: 1px solid #000000;
 	border-radius: 50px;
@@ -28,11 +25,23 @@
 	cursor: pointer;
 	user-select: none;
 	appearance: none;
-	touch-action: manipulation;  
+	touch-action: manipulation;
 	vertical-align: top;
 	transition: box-shadow 0.2s;
+	margin-bottom: 0.6vw;
+	margin-right: 1vw;
+	font-family: 'Cuprum', sans-serif;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+}
+  
+#astar #edit {
+	margin-right: 10.3vw;
+}
 
-    font-family: 'Cuprum', sans-serif;
+#astar #editStart {
+	margin-right: 18.3vw;
 }
 
 #astar button.btn:focus-visible {
@@ -54,6 +63,43 @@
 	border-color: #eee;
 	color: #444;
 	cursor: not-allowed;
+}
+
+#astar #editStart:disabled {
+	background-color: #eee;
+	border-color: #eee;
+	color: #444;
+	cursor: not-allowed;
+}
+
+#astar form {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	margin-bottom: 0.6vw;
+	margin-right: 10.3vw;
+}
+  
+#astar input[type=number] {
+	display: block;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 0.375rem 0.75rem;
+	font-size: 1rem;
+	font-weight: 600;
+	line-height: 1.5;
+	color: #495057;
+	background-color: #fff;
+	background-clip: padding-box;
+	border: 1px solid #ced4da;
+	border-radius: 0.25rem;
+	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+  
+#astar input[type=number]:focus {
+	outline: none;
+	border-color: #7db8ff;
+	box-shadow: 0 0 0 0.2rem rgb(125 184 255 / 25%);
 }
 
 #astar-div {
